src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>9 de Julio</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Evaluacion</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Razon de oportunidad perdida</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                    <label>Compro en otro lado</label>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                    <label>Presupuesto insuficiente</label>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                    <label>Contacto sin poder de desicion</label>
                </value>
                <value>
                    <fullName>Price</fullName>
                    <label>Precio</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>Otra</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Obra__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Obra</label>
        <referenceTo>Obra__c</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unidad</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Obra__c</field>
                <operation>equals</operation>
                <valueField>Unidad__c.Obra__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Unidad__c</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>